New solution - these packages exist in amazon yum

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -2,6 +2,11 @@ packages:
   yum:
     postgresql95-devel: []
     git: []
+    geos: []
+    gdal: []
+    gdal-devel: []
+    gdal-python: []
+    proj: []
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: root/wsgi.py
