Attempting yum install from centos.

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -3,16 +3,16 @@ packages:
     postgresql95-devel: []
     git: []
     geos: []
-    gdal: []
-    gdal-devel: []
-    gdal-python: []
-    proj: []
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: root/wsgi.py
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: root.settings
 container_commands:
+  01_yuminstall:
+    command: "yum -y install http://download.postgresql.org/pub/repos/yum/9.5/redhat/rhel-6.8-x86_64/pgdg-ami201503-95-9.5-3.noarch.rpm"
+  02_yuminstall:
+    command: "yum --enablerepo=epel -y install postgis2_94 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
   02_migrate:
     command: "python manage.py migrate"
     leader_only: true
