Test the existence of installed package.

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -11,6 +11,7 @@ option_settings:
 container_commands:
   01_yuminstall:
     command: "yum -y install http://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-6.8-x86_64/pgdg-ami201503-94-9.4-3.noarch.rpm"
+    test: "rpm -q pgdg-ami201503-94-9.4-3.noarch"
     ignoreErrors: true
   02_yuminstall:
     command: "yum --enablerepo=epel -y install postgis2_94 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
