Added login redirect url to settings so that login from root behaves nicely, and added collect static to ebextensions.

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -18,3 +18,6 @@ container_commands:
   02_migrate:
     command: "python manage.py migrate"
     leader_only: true
+  03_collectstatic:
+    command: "python manage.py collectstatic"
+    leader_only: true
