--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -16,8 +16,8 @@ container_commands:
   02_yuminstall:
     command: "yum --enablerepo=epel -y install postgis2_94 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
   02_migrate:
-    command: "python manage.py migrate"
+    command: "python manage.py migrate --noinput"
     leader_only: true
   03_collectstatic:
-    command: "python manage.py collectstatic"
+    command: "python manage.py collectstatic --noinput"
     leader_only: true
