--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ botocore==1.4.93
 Django==1.10.5
 django-dbbackup==3.1.3
 django-filter==1.0.1
+django-model-utils==2.6.1
 django-ratelimit-backend==1.0
 django-storages==1.5.2
 djangorestframework==3.5.3
 docutils==0.13.1
+hypothesis==3.6.1
 jmespath==0.9.0
 Markdown==2.6.8
 packaging==16.8
@@ -19,4 +21,6 @@ pytz==2016.10
 s3transfer==0.1.10
 simplejson==3.10.0
 six==1.10.0
+swapper==1.0.0
+tqdm==4.11.2
 wget==3.2
