--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto==2.45.0
 boto3==1.4.3
 botocore==1.4.93
 Django==1.10.5
+django-cities==0.5.0.3
 django-dbbackup==3.1.3
 django-filter==1.0.1
 django-model-utils==2.6.1
@@ -10,14 +11,19 @@ django-ratelimit-backend==1.0
 django-storages==1.5.2
 djangorestframework==3.5.3
 docutils==0.13.1
+ecdsa==0.13
+future==0.16.0
 hypothesis==3.6.1
 jmespath==0.9.0
 Markdown==2.6.8
 packaging==16.8
 psycopg2==2.6.2
+pycrypto==2.6.1
 pyparsing==2.1.10
 python-dateutil==2.6.0
+python-jose==1.3.2
 pytz==2016.10
+requests==2.13.0
 s3transfer==0.1.10
 simplejson==3.10.0
 six==1.10.0
