--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ boto3==1.4.3
 botocore==1.4.93
 Django==1.10.5
 django-cities==0.5.0.3
+django-crispy-forms==1.6.1
 django-dbbackup==3.1.3
 django-filter==1.0.1
 django-model-utils==2.6.1
