Add test to poppler install

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -14,6 +14,7 @@ container_commands:
     test: "var=$(rpm -q pgdg-ami201503-94-9.4-3.noarch); echo $var; if [ \"$var\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]; then return 0; fi"
   02_yuminstall:
     command: "yum --enablerepo=epel -y install postgis2_94 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
+    test: "var=$(rmp -q poppler-0.12.4-10.el6.x86_64); echo $var; if [ \"$var\" != \"poppler-0.12.4-10.el6.x86_64\" ]; then return 0; fi"
   03_migrate:
     command: "python manage.py migrate --noinput"
     leader_only: true
