Remove return statements from test as caused test to always fail.

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -11,11 +11,11 @@ option_settings:
 container_commands:
   01_yuminstall:
     command: "yum -y install http://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-6.8-x86_64/pgdg-ami201503-94-9.4-3.noarch.rpm"
-    test: "var=$(rpm -q pgdg-ami201503-94-9.4-3.noarch); echo $var; if [ \"$var\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]; then return 0; fi"
+    test: "var=$(rpm -q pgdg-ami201503-94-9.4-3.noarch); echo $var; if [ \"$var\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]; then echo "0"; else echo "1" fi"
     ignoreErrors: true
   02_yuminstall:
     command: "yum --enablerepo=epel -y install postgis2_94 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
-    test: "var=$(rpm -q poppler-0.12.4-10.el6.x86_64); echo $var; if [ \"$var\" != \"poppler-0.12.4-10.el6.x86_64\" ]; then return 0; else return 1; fi"
+    test: "var=$(rpm -q poppler-0.12.4-10.el6.x86_64); echo $var; if [ \"$var\" != \"poppler-0.12.4-10.el6.x86_64\" ]; then echo "0"; else echo "1"; fi"
     ignoreErrors: true
   03_migrate:
     command: "python manage.py migrate --noinput"
