--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,8 +1,11 @@
 packages:
+  rpm:
+    epel: http://download.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
   yum:
     postgresql94-devel: []
     git: []
     geos: []
+    gdal: []
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: root/wsgi.py
@@ -10,7 +13,7 @@ option_settings:
     DJANGO_SETTINGS_MODULE: root.settings
 container_commands:
   01_yuminstall:
-    command: "yum -y install http://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-6.8-x86_64/pgdg-ami201503-94-9.4-3.noarch.rpm"
+    command: "yum --enablerepo=epel -y install http://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-6.8-x86_64/pgdg-ami201503-94-9.4-3.noarch.rpm"
     test: "var=$(rpm -q pgdg-ami201503-94-9.4-3.noarch); if [ \"$var\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]; then echo \"0\"; else exit(1) fi"
     ignoreErrors: true
   02_yuminstall:
