--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -11,11 +11,11 @@ option_settings:
 container_commands:
   01_yuminstall:
     command: "yum --enablerepo=epel -y install http://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-6.8-x86_64/pgdg-ami201503-94-9.4-3.noarch.rpm"
-    test: "var=$(rpm -q pgdg-ami201503-94-9.4-3.noarch); if [ \"$var\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]; then echo true; else exit(1) fi"
+    test: "[ \"$(rpm -q pgdg-ami201503-94-9.4-3.noarch)\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]"
     ignoreErrors: true
   02_yuminstall:
     command: "yum --enablerepo=epel -y install postgis2_94 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
-    test: "var=$(rpm -q poppler-0.12.4-10.el6.x86_64); if [ \"$var\" != \"poppler-0.12.4-10.el6.x86_64\" ]; then echo \"0\"; else exit(1); fi"
+    test: "[ \"$(rpm -q poppler-0.12.4-10.el6.x86_64)\" != \"poppler-0.12.4-10.el6.x86_64\" ]"
     ignoreErrors: true
   03_migrate:
     command: "python manage.py migrate --noinput"
