--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ botocore==1.4.93
 CacheControl==0.12.0
 Django==1.10.5
 django-cities==0.5.0.3
+django-cors-headers==2.0.2
 django-crispy-forms==1.6.1
 django-dbbackup==3.1.3
 django-filter==1.0.1
