--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ boto==2.45.0
 boto3==1.4.3
 botocore==1.4.93
 CacheControl==0.12.0
+codecov==2.0.5
+coverage==4.3.4
 Django==1.10.5
 django-cities==0.5.0.3
 django-cors-headers==2.0.2
