--- a/requirements.txt
+++ b/requirements.txt
@@ -19,19 +19,32 @@ djangorestframework==3.5.3
 docutils==0.13.1
 ecdsa==0.13
 future==0.16.0
+gcloud==0.17.0
+googleapis-common-protos==1.5.2
+httplib2==0.10.3
 hypothesis==3.6.1
 jmespath==0.9.0
+jws==0.1.3
 lockfile==0.12.2
 Markdown==2.6.8
 msgpack-python==0.4.8
+oauth2client==3.0.0
 packaging==16.8
+protobuf==3.2.0
 psycopg2==2.6.2
+pyasn1==0.2.3
+pyasn1-modules==0.0.8
 pycrypto==2.6.1
+pycryptodome==3.4.3
 pyparsing==2.1.10
+Pyrebase==3.0.27
 python-dateutil==2.6.0
 python-jose==1.3.2
+python-jwt==2.0.1
 pytz==2016.10
-requests==2.13.0
+requests==2.11.1
+requests-toolbelt==0.7.0
+rsa==3.4.2
 s3transfer==0.1.10
 simplejson==3.10.0
 six==1.10.0
