--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-fixture-magic==0.1.3
 django-model-utils==2.6.1
 django-ratelimit-backend==1.0
 django-storages==1.5.2
+django-user-agents==0.3.0
 djangorestframework==3.5.3
 docutils==0.13.1
 ecdsa==0.13
@@ -42,6 +43,7 @@ python-dateutil==2.6.0
 python-jose==1.3.2
 python-jwt==2.0.1
 pytz==2016.10
+PyYAML==3.12
 requests==2.11.1
 requests-toolbelt==0.7.0
 rsa==3.4.2
@@ -50,4 +52,6 @@ simplejson==3.10.0
 six==1.10.0
 swapper==1.0.0
 tqdm==4.11.2
+ua-parser==0.7.3
+user-agents==1.1.0
 wget==3.2
