Added cronjob for randomising dishes.

--- a/cron.yaml
+++ b/cron.yaml
@@ -3,3 +3,6 @@ cron:
  - name: "backupdb"
    url: "/cron/db/backup/"
    schedule: "0 16 * * *"
+ - name: "randomisedishes"
+   url: "/cron/randomise/dishes/"
+   schedule: "0 */2 * * *"
