--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -19,7 +19,9 @@ container_commands:
     ignoreErrors: true
   03_migrate:
     command: "python manage.py migrate --noinput"
+    test: "[ \"$ROLE\" != \"WORKER\" ]"
     leader_only: true
   04_collectstatic:
     command: "python manage.py collectstatic --noinput"
+    test: "[ \"$ROLE\" != \"WORKER\" ]"
     leader_only: true
