--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ boto3==1.4.3
 botocore==1.4.93
 CacheControl==0.12.0
 codecov==2.0.5
+contextlib2==0.5.5
 coverage==4.3.4
 Django==1.10.5
 django-cities==0.5.0.3
@@ -44,6 +45,7 @@ python-jose==1.3.2
 python-jwt==2.0.1
 pytz==2016.10
 PyYAML==3.12
+raven==6.0.0
 requests==2.11.1
 requests-toolbelt==0.7.0
 rsa==3.4.2
