--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ contextlib2==0.5.5
 coverage==4.3.4
 Django==1.10.5
 django-cities==0.5.0.3
+django-compat==1.0.14
 django-cors-headers==2.0.2
 django-crispy-forms==1.6.1
 django-dbbackup==3.1.3
 django-filter==1.0.1
 django-fixture-magic==0.1.3
+django-hijack==2.1.4
+django-hijack-admin==2.1.4
 django-model-utils==2.6.1
 django-ratelimit-backend==1.0
 django-storages==1.5.2
