--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -2,6 +2,7 @@ packages:
   yum:
     postgresql94-devel: []
     git: []
+    geos: []
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: root/wsgi.py
@@ -12,15 +13,15 @@ container_commands:
     command: "yum --enablerepo=epel -y install http://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-6.8-x86_64/pgdg-ami201503-94-9.4-3.noarch.rpm"
     test: "[ \"$(rpm -q pgdg-ami201503-94-9.4-3.noarch)\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]"
     ignoreErrors: true
-  03_yuminstall:
-    command: "yum --enablerepo=epel -y install postgis2_94 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
+  02_yuminstall:
+    command: "yum --enablerepo=epel -y install postgis2_94-2.1.8 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
     test: "[ \"$(rpm -q poppler-0.12.4-10.el6.x86_64)\" != \"poppler-0.12.4-10.el6.x86_64\" ]"
     ignoreErrors: true
-  04_migrate:
+  03_migrate:
     command: "python manage.py migrate --noinput"
     test: "[ \"$ROLE\" != \"WORKER\" ]"
     leader_only: true
-  05_collectstatic:
+  04_collectstatic:
     command: "python manage.py collectstatic --noinput"
     test: "[ \"$ROLE\" != \"WORKER\" ]"
     leader_only: true
