Attempt prevent yum absolution of postgis22_94-2.1.8-1

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -14,7 +14,7 @@ container_commands:
     test: "[ \"$(rpm -q pgdg-ami201503-94-9.4-3.noarch)\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]"
     ignoreErrors: true
   02_yuminstall:
-    command: "yum --enablerepo=epel -y install postgis2_94-2.1.8-1 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
+    command: "yum --enablerepo=epel -y --setopt=obsoletes=0 install postgis2_94-2.1.8-1 http://centos-distro.cavecreek.net/centos/6.8/os/x86_64/Packages/poppler-0.12.4-10.el6.x86_64.rpm"
     test: "[ \"$(rpm -q poppler-0.12.4-10.el6.x86_64)\" != \"poppler-0.12.4-10.el6.x86_64\" ]"
     ignoreErrors: true
   03_migrate:
