--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -9,15 +9,15 @@ option_settings:
     DJANGO_SETTINGS_MODULE: root.settings
 container_commands:
   01_yuminstall:
-    command: "yum --enablerepo=epel -y install http://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-6.8-x86_64/geos-3.5.0-1.rhel6.x86_64.rpm http://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-6.8-x86_64/pgdg-ami201503-94-9.4-3.noarch.rpm"
+    command: "yum --enablerepo=epel -y install https://s3-us-west-2.amazonaws.com/fdme-deps/geos-3.5.0-1.rhel6.x86_64.rpm https://s3-us-west-2.amazonaws.com/fdme-deps/pgdg-ami201503-94-9.4-3.noarch.rpm"
     test: "[ \"$(rpm -q pgdg-ami201503-94-9.4-3.noarch)\" != \"pgdg-ami201503-94-9.4-3.noarch\" ]"
     ignoreErrors: true
   02_yuminstall:
-    command: "yum --enablerepo=epel -y install http://centos-distro.cavecreek.net/centos/6.9/os/x86_64/Packages/poppler-0.12.4-11.el6.x86_64.rpm"
+    command: "yum --enablerepo=epel -y install https://s3-us-west-2.amazonaws.com/fdme-deps/poppler-0.12.4-11.el6.x86_64.rpm"
     test: "[ \"$(rpm -q poppler-0.12.4-11.el6.x86_64)\" != \"poppler-0.12.4-11.el6.x86_64\" ]"
     ignoreErrors: true
   03_yuminstall:
-    command: "yum --enablerepo=epel -y install postgis2_94"
+    command: "yum --enablerepo=epel -y install https://s3-us-west-2.amazonaws.com/fdme-deps/postgis22_94-2.2.5-1.rhel6.x86_64.rpm"
     test: "[ \"$(rpm -q poppler-0.12.4-10.el6.x86_64)\" != \"poppler-0.12.4-10.el6.x86_64\" ]"
     ignoreErrors: true
   04_migrate:
