--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-model-utils==2.6.1
 django-phonenumber-field==1.3.0
 django-ratelimit-backend==1.0
 django-storages==1.5.2
+django-timezone-field==2.0
 django-user-agents==0.3.0
 djangorestframework==3.5.3
 docutils==0.13.1
@@ -29,6 +30,7 @@ ecdsa==0.13
 future==0.16.0
 gcloud==0.17.0
 googleapis-common-protos==1.5.2
+googlemaps==2.5.0
 httplib2==0.10.3
 hypothesis==3.6.1
 jmespath==0.9.0
