--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ boto==2.45.0
 boto3==1.4.3
 botocore==1.4.93
 CacheControl==0.12.0
+certifi==2017.4.17
+chardet==3.0.4
 codecov==2.0.5
 contextlib2==0.5.5
 coverage==4.3.4
@@ -33,6 +35,7 @@ googleapis-common-protos==1.5.2
 googlemaps==2.5.0
 httplib2==0.10.3
 hypothesis==3.6.1
+idna==2.5
 jmespath==0.9.0
 jws==0.1.3
 lockfile==0.12.2
@@ -55,7 +58,7 @@ python-jwt==2.0.1
 pytz==2016.10
 PyYAML==3.12
 raven==6.0.0
-requests==2.11.1
+requests==2.18.1
 requests-toolbelt==0.7.0
 rsa==3.4.2
 s3transfer==0.1.10
@@ -64,5 +67,6 @@ six==1.10.0
 swapper==1.0.0
 tqdm==4.11.2
 ua-parser==0.7.3
+urllib3==1.21.1
 user-agents==1.1.0
 wget==3.2
