--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ coverage==4.3.4
 Django==1.10.5
 django-bootstrap3==8.2.3
 django-cities==0.5.0.3
+django-ckeditor==5.2.2
 django-compat==1.0.14
 django-cors-headers==2.0.2
 django-crispy-forms==1.6.1
@@ -64,6 +65,7 @@ rsa==3.4.2
 s3transfer==0.1.10
 simplejson==3.10.0
 six==1.10.0
+subdomains==2.1.1
 swapper==1.0.0
 tqdm==4.11.2
 ua-parser==0.7.3
