--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-hijack-admin==2.1.4
 django-model-utils==2.6.1
 django-phonenumber-field==1.3.0
 django-ratelimit-backend==1.0
+django-social-share==1.1.1
 django-storages==1.5.2
 django-timezone-field==2.0
 django-user-agents==0.3.0
