--- a/cron.yaml
+++ b/cron.yaml
@@ -15,3 +15,6 @@ cron:
  - name: "validaterecipes"
    url: "/cron/validate/recipes/"
    schedule: "5 0 * * *"
+ - name: "processdraftrecipes"
+   url: "/cron/process/draft/recipes/"
+   schedule: "*/5 * * * *"
