--- a/requirements.txt
+++ b/requirements.txt
@@ -42,9 +42,11 @@ jmespath==0.9.0
 jws==0.1.3
 lockfile==0.12.2
 Markdown==2.6.8
+mock==2.0.0
 msgpack-python==0.4.8
 oauth2client==3.0.0
 packaging==16.8
+pbr==3.1.1
 phonenumberslite==8.5.1
 protobuf==3.2.0
 psycopg2==2.6.2
