Removed from cron: dbbackup, slowed down: processdraftrecipes Updated sqs jobs view to support new worker registration pattern. Added automatic job discovery for jobs inside an app's jobs.py Fixed ridiculous bug in six for metaclass wrapper. Now issubclass works.

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,8 +1,5 @@
 version: 1
 cron:
- - name: "backupdb"
-   url: "/cron/db/backup/"
-   schedule: "0 16 * * *"
  - name: "randomisedishes"
    url: "/cron/randomise/dishes/"
    schedule: "20 * * * *"
@@ -17,4 +14,4 @@ cron:
    schedule: "5 0 * * *"
  - name: "processdraftrecipes"
    url: "/cron/process/draft/recipes/"
-   schedule: "*/5 * * * *"
+   schedule: "30 * * * *"
