--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ django-model-utils==2.6.1
 django-phonenumber-field==1.3.0
 django-ratelimit-backend==1.0
 django-social-share==1.1.1
+django-sql-explorer==1.1.1
 django-storages==1.5.2
 django-timezone-field==2.0
 django-user-agents==0.3.0
@@ -55,8 +56,10 @@ pyasn1==0.2.3
 pyasn1-modules==0.0.8
 pycrypto==2.6.1
 pycryptodome==3.4.3
+PyJWT==1.5.3
 pyparsing==2.1.10
 Pyrebase==3.0.27
+PySocks==1.6.7
 python-dateutil==2.6.0
 python-jose==1.3.2
 python-jwt==2.0.1
@@ -69,10 +72,12 @@ rsa==3.4.2
 s3transfer==0.1.10
 simplejson==3.10.0
 six==1.10.0
+sqlparse==0.2.3
 subdomains==2.1.1
 swapper==1.0.0
 tqdm==4.11.2
 ua-parser==0.7.3
+unicodecsv==0.14.1
 urllib3==1.21.1
 user-agents==1.1.0
 wget==3.2
